fixed final css and spacing

--- a/src/Components/History.css
+++ b/src/Components/History.css
@@ -1,4 +1,4 @@
 .history {
-  margin-left: 20px;
+  margin: 60px 100px 60px 100px;
   grid-area: history;
 }
