--- a/src/Components/HistoryBody.css
+++ b/src/Components/HistoryBody.css
@@ -31,7 +31,7 @@
 }
 
 .card {
-    width: 330px;
+    width: 300px;
     margin-right: 20px;
     margin-bottom: 20px;
 }
