--- a/src/Components/Timer.css
+++ b/src/Components/Timer.css
@@ -1,30 +1,22 @@
-.timer {
-  grid-area: timer;
-}
+
 @import '/node_modules/antd/dist/antd.css';
 
-.timer {
-  /* vertical-align: center; */
-  padding-top: 20px;
-  /* margin-left: 0px; */
-}
 
-.message {
-  /* margin-right: 300px; */
-  font-size: 30px;
-  /* vertical-align: center; */
+.timer {
+  grid-area: timer;
+  margin: auto;
 }
 
 .timerCircle {
-  margin-left: 25px;
   font-size: 25px;
 }
 
 .AltTimer {
-  /* margin-right: 20px; */
+  text-align: center;
+  height: 40px;
 }
 
-.Message {
-  margin-right: 150px;
+.message {
+  font-size: 25px;
 }
 
